--- a/index.html
+++ b/index.html
@@ -10,11 +10,77 @@
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- STYLE SHEET -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <main>
+        <!-- CONTENITORE CORPO CENTRALE -->
+       <div class="container">
+           <!--CORPO CENTRALE  -->
+           <section class="wrapper">
+            <!-- HEADER -->
+            <header>
+             <h1>Meet our Team</h1>
+            </header>
+            <!-- MAIN CORPO CENTRALE -->
+            <div>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores totam earum dignissimos, fugit unde officia neque explicabo quas minima iste expedita ipsa nobis aspernatur, vel, repellat quasi. Nam, quibusdam in?</p>
+               <div class="row clearfix">
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                </div>    
+                <div class="row clearfix">
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                    <div class="colonum">
+                        <div class="card clearfix">
+                            <img src="img/female1.png" alt="Laura Rossi">
+                            <h3>Marco Bianchi</h3>
+                            <span>Designer</span>
+                            <a href="mailto:marcobianchi@team.com">mailto:marcobianchi@team.com</a>
+                        </div>
+                    </div>
+                </div>  
+           </section> 
+       </div>
+  </main>
 </body>
 </html>
