--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Marco Calabretta">
     <meta name="description" content="Team list">
     <title>Meet our team</title>
+    <link rel="icon" href="img/teamicon.png">
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
